--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "predev": "npm install xlsx --save --no-audit --no-fund",
     "dev": "vite"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
