--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "predev": "npm install xlsx --save --no-audit --no-fund",
-    "dev": "vite"
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
