--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "^5.4.5",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "rollup": "3.29.4"
+
   }
 }
